# argdata

./: .gitignore  .ycm_extra_conf.py  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE  argdata.h  argdata.hpp  argdata_get_int_s.c  argdata_get_timestamp.c  argdata_impl.h
examples/: edit-leveldb.cc  webserver.c
src/: argdata.h  argdata.hpp  argdata_create_binary.c  argdata_create_binary_copy.c  argdata_create_fd.c  argdata_create_float.c  argdata_create_int_s.c  argdata_create_int_u.c  argdata_create_map.c  argdata_create_seq.c  argdata_create_str.c  argdata_create_str_c.c  argdata_create_timestamp.c  argdata_false.c  argdata_free.c  argdata_from_buffer.c  argdata_from_buffer_copy.c  argdata_get_binary.c  argdata_get_bool.c  argdata_get_fd.c  argdata_get_float.c  argdata_get_int_s.c  argdata_get_int_u.c  argdata_get_str.c  argdata_get_str_c.c  argdata_get_timestamp.c  argdata_impl.h  argdata_map_get.c  argdata_map_iterate.c  argdata_map_next.c  argdata_null.c  argdata_print_yaml.c  argdata_reader_create.c  argdata_reader_free.c  argdata_reader_get.c  argdata_reader_impl.h  argdata_reader_pull.c  argdata_reader_release_fd.c  argdata_seq_get.c  argdata_seq_iterate.c  (+9 more)
